<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hidden_disability_nav_host_fragment"
    android:label="@string/hidden_disability_title"
    app:startDestination="@id/hidden_disability_fragment">

    <fragment
        android:id="@+id/hidden_disability_fragment"
        android:name="com.tenacity.invisibledisabilities.ui.gallery.HiddenDisabilityFragment"
        android:label="@string/my_hidden_disability_title">

        <action
            app:destination="@id/disability_detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/disability_detail_fragment"
            app:popUpToInclusive="true" />

        <argument
            android:name="disabilityId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/disability_list_fragment"
        android:name="com.tenacity.invisibledisabilities.ui.gallery.DisabilityListFragment"
        android:label="@string/disability_list_title"
        tools:layout="@layout/fragment_disability_list">

        <action
            android:id="@+id/action_disability_list_fragment_to_disability_detail_fragment"
            app:destination="@id/disability_detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/disability_detail_fragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/disability_detail_fragment"
        android:name="com.tenacity.invisibledisabilities.ui.gallery.DisabilityDetailFragment"
        android:label="@string/disability_details_title"
        tools:layout="@layout/fragment_disability_detail">

        <action
            android:id="@+id/action_disability_detail_fragment_to_extension_to_blue_badge_fragment"
            app:destination="@id/extension_to_blue_badge_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/extension_to_blue_badge_fragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="disabilityId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/extension_to_blue_badge_fragment"
        android:name="com.tenacity.invisibledisabilities.ui.gallery.ExtensionToBlueBadgeFragment"
        android:label="@string/extension_to_blue_badge_title"
        tools:layout="@layout/fragment_extension_to_blue_badge_detail">

        <action
            android:id="@+id/action_extension_to_blue_badge_fragment_to_criterias_fragment"
            app:destination="@id/criterias_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/criterias_fragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="extensiontobluebadgeId"
            app:argType="string" />


    </fragment>

    <fragment
        android:id="@+id/criterias_fragment"
        android:name="com.tenacity.invisibledisabilities.ui.gallery.CriteriasFragment"
        android:label="@string/criterias_title"
        tools:layout="@layout/fragment_criterias_detail">

        <action
            android:id="@+id/action_criterias_fragment_to_disability_detail_fragment"
            app:destination="@id/disability_detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/disability_detail_fragment"
            app:popUpToInclusive="true" />

        <argument
            android:name="criteriasId"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/subconsiderations_fragment"
        android:name="com.tenacity.invisibledisabilities.ui.gallery.SubConsiderationsFragment"
        android:label="@string/sub_considerations_title"
        tools:layout="@layout/fragment_subconsiderations_detail">

        <action
            android:id="@+id/action_sub_considerations_fragment_to_supporting_evidence_fragment"
            app:destination="@id/supporting_evidence_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/supporting_evidence_fragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="subconsiderationsId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/supporting_evidence_fragment"
        android:name="com.tenacity.invisibledisabilities.ui.gallery.SupportingEvidenceFragment"
        android:label="@string/supporting_evidence_title"
        tools:layout="@layout/fragment_supporting_evidence_detail">

        <action
            android:id="@+id/action_supporting_evidence_fragment_to_coping_strategy_fragment"
            app:destination="@id/coping_strategy_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/coping_strategy_fragment"
            app:popUpToInclusive="true" />

        <argument
            android:name="supportingevidenceId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/coping_strategy_fragment"
        android:name="com.tenacity.invisibledisabilities.ui.gallery.CopingStrategyListFragment"
        android:label="@string/coping_strategy_title"
        tools:layout="@layout/fragment_copingstrategy_detail">

        <action
            android:id="@+id/action_coping_strategy_fragment_to_practitioners_fragment"
            app:destination="@id/practitioner_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/practitioners_fragment"
            app:popUpToInclusive="true" />

        <argument
            android:name="copingstrategyId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/practitioner_fragment"
        android:name="com.tenacity.invisibledisabilities.ui.gallery.PractitionerFragment"
        android:label="@string/practitioner_title"
        tools:layout="@layout/fragment_practitioner_detail">

        <action
            android:id="@+id/action_practitioners_fragment_to_hidden_disability_fragment"
            app:destination="@+id/hidden_disability_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/hidden_disability_fragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="practitionerId"
            app:argType="string" />


    </fragment>


</navigation>






