<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_hidden_disability"
    app:startDestination="@+id/hidden_disability_fragment">

    <fragment
        android:id="@+id/hidden_disability_fragment"
        android:name="com.tenacity.hiddendisabilities.ui.gallery.HiddenDisabilityFragment"
        android:label="@string/hidden_disability_title">
        tools:layout="@layout/fragment_hidden_disability">

        <action
            android:id="@+id/action_hidden_disability_fragment_to_disability_detail_fragment"
            app:destination="@id/disability_detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/disability_detail_fragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/disability_list_fragment"
        android:name="com.tenacity.hiddendisabilities.ui.gallery.DisabilityListFragment"
        android:label="@string/disability_list_title"
        tools:layout="@layout/fragment_disability_list">

        <action
            android:id="@+id/action_disability_list_fragment_to_disability_detail_fragment"
            app:destination="@id/disability_detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/disability_detail_fragment"
            app:popUpToInclusive="true" />

    </fragment>


    <fragment
        android:id="@+id/disability_detail_fragment"
        android:name="com.tenacity.hiddendisabilities.ui.gallery.DisabilityDetailFragment"
        android:label="@string/disability_details_title"
        tools:layout="@layout/fragment_disability_detail">

        <argument
            android:name="disabilityId"
            app:argType="string" />
    </fragment>

</navigation>






